feat: реализованы конечные точки для каталога
Теперь, пользователь может просматривать, фильтровать, удалять позиции каталога
