# src/main/resources/openapi.yml
@@ -76,9 +76,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/FurnitureDto'
+                $ref: '#/components/schemas/FurnitureDto'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
